# edoxaban-model

./: .gitignore  .zenodo.json  Dockerfile  Dockerfile.md  README.md  edoxaban_model.omex  pyproject.toml
docs/: RELEASE.md
fit/20251212_200048__ba60f/EDOXABAN_LSQ_PK/: index.html  optimization_result.tsv  report.txt
fit/20251212_201035__2a314/EDOXABAN_LSQ_PD/: index.html  optimization_result.tsv  report.txt
models/: edoxaban_body.xml  edoxaban_body_flat.xml  edoxaban_coagulation.md  edoxaban_coagulation.xml  edoxaban_intestine.xml  edoxaban_kidney.md  edoxaban_kidney.xml  edoxaban_liver.xml
release-notes/: 0.7.0.md  0.7.1.md
simulations/all/: index.html
simulations/all/Bathala2012/: Bathala2012.html  Bathala2012.json  Bathala2012_M1_ED60.tsv  Bathala2012_M1_feces_ED60.tsv  Bathala2012_M1_feces_urine_ED60.tsv  Bathala2012_M1_urine_ED60.tsv  Bathala2012_M4_ED60.tsv  Bathala2012_M4_feces_ED60.tsv  Bathala2012_M4_feces_urine_ED60.tsv  Bathala2012_M4_urine_ED60.tsv  Bathala2012_M6_ED60.tsv  Bathala2012_M6_feces_ED60.tsv  Bathala2012_M6_feces_urine_ED60.tsv  Bathala2012_M6_urine_ED60.tsv  Bathala2012_M8_ED60.tsv  Bathala2012_M8_feces_ED60.tsv  Bathala2012_M8_feces_urine_ED60.tsv  Bathala2012_M8_urine_ED60.tsv  Bathala2012_edo_total_feces_ED60.tsv  Bathala2012_edo_total_feces_urine_ED60.tsv  Bathala2012_edo_total_urine_ED60.tsv  Bathala2012_edoxaban_ED60.tsv  Bathala2012_edoxaban_feces_ED60.tsv  Bathala2012_edoxaban_feces_urine_ED60.tsv  Bathala2012_edoxaban_metabolites_feces_ED60.tsv  Bathala2012_edoxaban_metabolites_feces_urine_ED60.tsv  Bathala2012_edoxaban_metabolites_urine_ED60.tsv  Bathala2012_edoxaban_urine_ED60.tsv  Bathala2012_recovery_M1_feces_ED60.tsv  Bathala2012_recovery_M1_feces_urine_ED60.tsv  Bathala2012_recovery_M1_urine_ED60.tsv  Bathala2012_recovery_M4_feces_ED60.tsv  Bathala2012_recovery_M4_feces_urine_ED60.tsv  Bathala2012_recovery_M4_urine_ED60.tsv  Bathala2012_recovery_M6_feces_ED60.tsv  Bathala2012_recovery_M6_feces_urine_ED60.tsv  Bathala2012_recovery_M6_urine_ED60.tsv  Bathala2012_recovery_M8_feces_ED60.tsv  Bathala2012_recovery_M8_feces_urine_ED60.tsv  (+10 more)
(+402 files in other folders)
